[gd_scene load_steps=28 format=3 uid="uid://dejcawvj3v4ys"]

[ext_resource type="Texture2D" uid="uid://eij2j5asvpj1" path="res://sprites/3 - Skeleton/Limping_Movement (32 x 32).png" id="1_p7g5j"]
[ext_resource type="Script" uid="uid://beaev7i7khii0" path="res://scripts/enemy.gd" id="1_pqhw6"]
[ext_resource type="Texture2D" uid="uid://damgwykwy31m0" path="res://sprites/3 - Skeleton/Crumbling_Into_Bone_Pile (32 x 32).png" id="2_uvc0s"]
[ext_resource type="Texture2D" uid="uid://dbbvxu8ngie6x" path="res://sprites/3 - Skeleton/Bone_Toss (32 x 32).png" id="2_x8e4v"]
[ext_resource type="Script" uid="uid://bu0h60j7mcyu" path="res://scripts/hitbox.gd" id="3_b4nis"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ae2me"]
atlas = ExtResource("2_x8e4v")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp52m"]
atlas = ExtResource("2_x8e4v")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5aq6"]
atlas = ExtResource("2_x8e4v")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_od71d"]
atlas = ExtResource("2_x8e4v")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjq3p"]
atlas = ExtResource("2_x8e4v")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_68dbu"]
atlas = ExtResource("2_uvc0s")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f71c5"]
atlas = ExtResource("2_uvc0s")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_adrne"]
atlas = ExtResource("2_uvc0s")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0e0p"]
atlas = ExtResource("2_uvc0s")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfp2m"]
atlas = ExtResource("2_uvc0s")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ku5l"]
atlas = ExtResource("2_uvc0s")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hijg5"]
atlas = ExtResource("2_uvc0s")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqhw6"]
atlas = ExtResource("1_p7g5j")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4nis"]
atlas = ExtResource("1_p7g5j")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvc0s"]
atlas = ExtResource("1_p7g5j")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8e4v"]
atlas = ExtResource("1_p7g5j")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrp0o"]
atlas = ExtResource("1_p7g5j")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq0pf"]
atlas = ExtResource("1_p7g5j")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_68dbu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae2me")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp52m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5aq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_od71d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjq3p")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_68dbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f71c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adrne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0e0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfp2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ku5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hijg5")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqhw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4nis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvc0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8e4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrp0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq0pf")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f71c5"]
radius = 8.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pqhw6"]
size = Vector2(14, 23)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x8e4v"]
radius = 7.99429
height = 28.83

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_pqhw6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_68dbu")
animation = &"attack"
autoplay = "walk"
frame = 4
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_f71c5")

[node name="Hitbox" type="Area2D" parent="." groups=["Enemies"]]
script = ExtResource("3_b4nis")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(2, 2.5)
shape = SubResource("RectangleShape2D_pqhw6")
debug_color = Color(0.933188, 1.8771e-05, 0.645687, 0.42)

[node name="FallDetect" type="RayCast2D" parent="."]
position = Vector2(3, 1)
scale = Vector2(1.33245, 0.809534)
target_position = Vector2(0, 20)

[node name="playerdetect" type="RayCast2D" parent="."]
position = Vector2(4, 3)
target_position = Vector2(25, 0)
collision_mask = 2

[node name="attackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackArea"]
position = Vector2(6, -2)
rotation = -3.5308
shape = SubResource("CapsuleShape2D_x8e4v")
debug_color = Color(0.752444, 0.457932, 9.62615e-07, 0.42)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
